--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,33 @@
 
 body {
-    background-color: beige;
+    background-color: lightgoldenrodyellow;
 }
 
 .containerForTheProductList .product {
     border-top: 1px solid black;
     margin-top: 10px;
-	padding: 10px 0;
+    padding: 10px 0;
 }
 
 .containerForTheProductList .product .imageOfTheProduct {
-	width: 100px;
-	height: 100px;
+    width: 100px;
+    height: 100px;
     margin-left: 10px;
-    background-color: #BABADA;
+    background-color: lightskyblue;
     border: 1px solid #000000;
-	display: inline-block;
+    display: inline-block;
+    border-radius: 5%;
+
 }
 
 .containerForTheProductList .product .text {
-	width: 200px;
-	display: inline-block;
-	vertical-align: top;
-	margin-left: 20px;
-	font-size: 20px;
+    width: 200px;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 20px;
+    font-size: 20px;
+}
+
+button {
+    border-radius: 5%;
 }
